--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -1,4 +1,6 @@
-$font-family-base: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-sans-serif;
-$primary-color: '#000ff';
+$primary: #ffe600;
+$secondary: #3483fa;
+$gray-800: #333333;
+$gray-700: #666666;
+$gray-600: #999999;
+$gray-600: #eeeeee;
