--- a/client/src/assets/scss/index.scss
+++ b/client/src/assets/scss/index.scss
@@ -1,3 +1,6 @@
-@import './variables';
-@import '~bootstrap/scss/bootstrap.scss';
+@import "./variables";
+@import "~bootstrap/scss/bootstrap.scss";
 
+body {
+  background-color: $gray-600;
+}
